
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fprintf (int ,char*,char*,int) ;
 scalar_t__ malloc (size_t) ;
 int memset (void*,int ,size_t) ;
 int stderr ;

__attribute__((used)) static __inline__ void * _xmalloc(size_t size, char *function, int line) {
        void * temp;
        temp = (void *)malloc( size );
        if (!temp) {
                fprintf(stderr,"Malloc failed at [%s:%d]",function, line);
                exit(-1);
        }
 else { memset( temp, 0, size ); return( temp );
 }
}
